<resources>
    <string name="app_name">Projeto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nomejante">Nome das Jantes</string>
    <string name="altura">Altura</string>
    <string name="raio">Raio</string>
    <string name="preco">Preco</string>
    <string name="largura">Largura</string>
    <string name="combustivel">Combustivel</string>
    <string name="transmissao">Transmissao</string>
    <string name="nome_tracao">Nome da Traçao</string>
    <string name="cor">Cor</string>
    <string name="nome_cor">Nome da Cor</string>
    <string name="preco_cor">Preço da Cor</string>
    <string name="nome_estofo">Nome dos Estofos</string>
    <string name="preco_estofo">Preço dos Estofos</string>
    <string name="bem_vindo_ao_novo_configurador_de_carros">Bem-vindo ao novo configurador de carros</string>
    <string name="marcas">Marcas</string>
    <string name="modelos">Modelos</string>
    <string name="motoriza_oes">Motorizaçoes</string>
    <string name="jantes">Jantes</string>
    <string name="pintura">Pintura</string>
    <string name="estilo_de_estofos">Estilo de Estofos</string>
    <string name="nome_transmissao">Nome da Transmissao</string>
    <string name="nome_combustivel">Nome do Combustivel</string>

    <string name="nome_marca">Nome da Marca</string>
    <string name="lista_marca_label">Lista dos marcas</string>
    <string name="inserir_marca_label">Inserir marca</string>
    <string name="alterar_marca_label">Alterar marca</string>
    <string name="eliminar_marca_label">Eliminar marca</string>

    <string name="nome_modelo">Nome do Modelo</string>
    <string name="lista_modelo_label">Lista dos modelos</string>
    <string name="inserir_modelo_label">Inserir modelo</string>
    <string name="alterar_modelo_label">Alterar modelo</string>
    <string name="eliminar_modelo_label">Eliminar modelo</string>


    <string name="nome_jante">Nome do Jante</string>
    <string name="lista_jante_label">Lista das Jantes</string>
    <string name="inserir_jante_label">Inserir jante</string>
    <string name="alterar_jante_label">Alterar jante</string>
    <string name="eliminar_jante_label">Eliminar jante</string>

    <string name="lista_estofo_label">Lista dos Estofos</string>
    <string name="inserir_estofo_label">Inserir estofo</string>
    <string name="alterar_estofo_label">Alterar estofo</string>
    <string name="eliminar_estofo_label">Eliminar estofo</string>

    <string name="lista_tracao_label">Lista das Traçoes</string>
    <string name="inserir_tracao_label">Inserir traçao</string>
    <string name="alterar_tracao_label">Alterar traçao</string>
    <string name="eliminar_tracao_label">Eliminar traçao</string>

    <string name="lista_transmissao_label">Lista das Transmissoes</string>
    <string name="inserir_transmissao_label">Inserir transmissao</string>
    <string name="alterar_transmissao_label">Alterar transmissao</string>
    <string name="eliminar_transmissao_label">Eliminar transmissao</string>

    <string name="lista_combustivel_label">Lista dos Combustiveis</string>
    <string name="inserir_combustivel_label">Inserir combustivel</string>
    <string name="alterar_combustivel_label">Alterar combustivel</string>
    <string name="eliminar_combustivel_label">Eliminar combustivel</string>

    <string name="lista_cor_label">Lista das Cor</string>
    <string name="inserir_cor_label">Inserir cor</string>
    <string name="alterar_cor_label">Alterar cor</string>
    <string name="eliminar_cor_label">Eliminar cor</string>

    <string name="lista_carro_label">Lista dos Carros</string>
    <string name="inserir_carro_label">Inserir carro</string>
    <string name="alterar_carro_label">Alterar carro</string>
    <string name="eliminar_carro_label">Eliminar carro</string>

    <string name="potencia">Potencia</string>
    <string name="consumo">Consumo</string>
    <string name="emissao">Emissao</string>

    <string name="lista_motorizacao_label">Lista das Motorizacoes</string>
    <string name="inserir_motorizacao_label">Inserir motorizacao</string>
    <string name="alterar_motorizacao_label">Alterar motorizacao</string>
    <string name="eliminar_motorizacao_label">Eliminar motorizacao</string>

    <string name="previous">Voltar</string>

    <string name="inserir">Inserir</string>
    <string name="alterar">Alterar</string>
    <string name="eliminar">Eliminar</string>


    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

    <string name="modelo_obrigatorio">Preencha o Nome do modelo</string>
    <string name="preco_obrigatorio">Preencha o preço</string>
    <string name="marca_obrigatoria">Escolha uma marca</string>

    <string name="modelo_guardado_sucesso">Modelo guardado com sucesso</string>
    <string name="modelo_eliminado_sucesso">Modelo eliminado com sucesso</string>

    <string name="erro_guardar_modelo">Erro ao guardar modelo</string>
    <string name="erro_eliminar_modelo">Erro ao eliminar modelo</string>

    <string name="confirma_eliminar_modelo">Tem a certeza que pretende eliminar o modelo?</string>

    <string name="nome_marca_obrigatorio">Preencha o Nome da marca</string>

    <string name="marca_guardada_sucesso">Marca guardada com sucesso</string>
    <string name="marca_eliminada_sucesso">Marca eliminada com sucesso</string>
    <string name="erro_guardar_marca">Erro ao guardar marca</string>
    <string name="erro_alterar_marca">Erro ao alterar marca</string>
    <string name="erro_eliminar_marca">Erro a eliminar marca</string>
    <string name="elimina_marca">Elimina Marcas</string>
    <string name="confirma_eliminar_marca">Tem a certeza que pretende eliminar esta marca?</string>


    <string name="nome_jante_obrigatorio">Preencha o Nome da jante</string>
    <string name="jante_guardada_sucesso">Jante guardada com sucesso</string>
    <string name="jante_eliminada_sucesso">Jante eliminada com sucesso</string>
    <string name="erro_guardar_jante">Erro ao guardar jante</string>
    <string name="erro_alterar_jante">Erro ao alterar jante</string>
    <string name="Introduza_largura">Introduza a Largura</string>
    <string name="Introduza_altura">Introduza a Altura</string>
    <string name="Introduza_raio">Introduza o Raio</string>
    <string name="Introduza_preco">Introduza o Preco</string>
    <string name="erro_eliminar_jante">Erro a eliminar jante</string>
    <string name="elimina_jantes">Elimina Jantes</string>

    <string name="nome_estofo_obrigatorio">Preencha o Nome de estofo</string>
    <string name="nome_preco_obrigatorio">Preencha o preço</string>
    <string name="erro_guardar_estofo">Erro ao guardar estofo</string>
    <string name="estofo_guardado_sucesso">Estofo guardado com sucesso</string>
    <string name="elimina_estofos">Elimina Estofos</string>
    <string name="erro_eliminar_estofo">Erro ao eliminar estofo</string>
    <string name="estofo_eliminado_sucesso">Estofo eliminado com sucesso</string>
    <string name="confirma_eliminar_estof">Tem a certeza que pretende eliminar este estofo?</string>

    <string name="motorizacao_obrigatoria">Preencha o Nome da motorizaçao</string>
    <string name="potencia_obrigatoria">Preencha a Potencia</string>
    <string name="consumo_obrigatorio">Preencha o Consumo</string>
    <string name="emissoes_obrigatorias">Preencha as emissoes</string>
    <string name="erro_guardar_motorizacao">Erro ao guardar motorizacao</string>
    <string name="motorizacao_guardada_sucesso">motorizacao guardada com sucesso</string>
    <string name="elimina_motorizacao">Elimina motorizacao</string>
    <string name="erro_eliminar_motorizacao">Erro ao eliminar motorizacao</string>
    <string name="motorizacao_eliminada_sucesso">motorizacao eliminada com sucesso</string>
    <string name="confirma_eliminar_motorizacao">Tem a certeza que pretende eliminar esta motorizacao?</string>

    <string name="nome_tracao_obrigatorio">Preencha o Nome da traçao</string>
    <string name="tracao">Traçao</string>
    <string name="erro_guardar_tracao">Erro ao guardar tracao</string>
    <string name="tracao_guardada_sucesso">Tracao guardada com sucesso</string>
    <string name="elimina_tracao">Elimina Tracao</string>
    <string name="erro_eliminar_tracao">Erro ao eliminar tracao</string>
    <string name="tracao_eliminada_sucesso">Tracao eliminada com sucesso</string>
    <string name="confirma_eliminar_tracao">Tem a certeza que pretende eliminar esta tracao?</string>

    <string name="nome_transmissao_obrigatorio">Preencha o Nome da transmissao</string>
    <string name="erro_guardar_transmissao">Erro ao guardar transmissao</string>
    <string name="transmissao_guardada_sucesso">Transmissao guardada com sucesso</string>
    <string name="elimina_transmissao">Elimina transmissao</string>
    <string name="erro_eliminar_transmissao">Erro ao eliminar transmissao</string>
    <string name="transmissao_eliminada_sucesso">Transmissao eliminada com sucesso</string>
    <string name="confirma_eliminar_transmissao">Tem a certeza que pretende eliminar esta transmissao?</string>

    <string name="nome_combustivel_obrigatorio">Preencha o Nome do combustivel</string>
    <string name="erro_guardar_combustivel">Erro ao guardar combustivel</string>
    <string name="combustivel_guardado_sucesso">Combustivel guardado com sucesso</string>
    <string name="elimina_combustivel">Elimina combustivel</string>
    <string name="erro_eliminar_combustivel">Erro ao eliminar combustivel</string>
    <string name="combustivel_eliminado_sucesso">Combustivel eliminado com sucesso</string>
    <string name="confirma_eliminar_combustivel">Tem a certeza que pretende eliminar este combustivel?</string>

    <string name="nome_cor_obrigatoria">Preencha o Nome da cor</string>
    <string name="erro_guardar_cor">Erro ao guardar cor</string>
    <string name="cor_guardada_sucesso">Cor guardada com sucesso</string>
    <string name="elimina_cor">Elimina cor</string>
    <string name="erro_eliminar_cor">Erro ao eliminar cor</string>
    <string name="cor_eliminada_sucesso">Cor eliminada com sucesso</string>
    <string name="confirma_eliminar_cor">Tem a certeza que pretende eliminar esta cor?</string>

    <string name="configura_carro">Configurar Carro</string>
    <string name="erro_guardar_carro">Erro ao guardar carro</string>
    <string name="carro_guardado_sucesso">Carro guardado com sucesso</string>
    <string name="elimina_carro">Elimina carro</string>
    <string name="erro_eliminar_carro">Erro ao eliminar carro</string>
    <string name="carro_eliminado_sucesso">Carro eliminado com sucesso</string>
    <string name="confirma_eliminar_carro">Tem a certeza que pretende eliminar este carro?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>