<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navhome"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/listaCoresFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lista_cor_label" />
        <item
            android:id="@+id/listaJantesFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lista_jante_label" />
        <item
            android:id="@+id/listaCombustivelFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lista_combustivel_label" />
        <item
            android:id="@+id/listaTracaoFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lista_tracao_label" />
        <item
            android:id="@+id/listaTransmissoesFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lista_transmissao_label" />
        <item
            android:id="@+id/listaEstofosFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lista_estofo_label" />



    </group>
</menu>