<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InserirMotorizacaoFragment" >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margem_campos"
        android:layout_marginLeft="@dimen/margem_campos"
        android:layout_marginTop="@dimen/margem_campos"
        android:layout_marginEnd="@dimen/margem_campos"
        android:layout_marginRight="@dimen/margem_campos">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPotencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/potencia"
            android:inputType="number"
            android:textColorHint="#4B4B4B" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConsumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/consumo"
                android:inputType="number"
                android:textColorHint="#4B4B4B" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmissoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emissao"
                    android:inputType="number"
                    android:textColorHint="#4B4B4B" />

                <TextView
                    android:id="@+id/textViewTransmiss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/transmissao" />

                <Spinner
                    android:id="@+id/spinnerTransmissao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/textViewTrac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tracao" />

                <Spinner
                    android:id="@+id/spinnerTacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/textViewCombustiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/combustivel" />

                <Spinner
                    android:id="@+id/spinnerCombustivel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>