<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InserirModeloFragment" >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_modelo"
            android:textColorHint="#4B4B4B" />

        <TextView
            android:id="@+id/textViewMarcas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marcas" />

        <Spinner
            android:id="@+id/spinnerMarcas"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:minHeight="48dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPreco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/preco"
                android:textColorHint="#4B4B4B" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>